big fix about safari not showing sort of img in jpg format

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -186,7 +186,7 @@ footer {
 #ditta_photo {
     min-height: 500px;
     height: 100%;
-    background-image: url('img/photo_magazzino.jpg');
+    background-image: url('img/photo_magazzino.png');
     opacity: 0.8;
     background-attachment: fixed;
     background-repeat: no-repeat;
